[tool.poetry]
name = "upb-lib"
version = "0.4.12"
description = "Library for interacting with UPB PIM."
homepage = "https://github.com/gwww/upb-lib"
authors = ["Glenn Waters <gwwaters+upb@gmail.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
  'Development Status :: 4 - Beta',
  'Intended Audience :: Developers',
]
include = ["CHANGELOG.md", "bin/**/*"]
exclude = ["test"]

[tool.poetry.dependencies]
python = ">= 3.7"
pytz = ">= 2019"
pyserial-asyncio = ">= 0.5"

[tool.poetry.dev-dependencies]
pytest = ">= 6"
urwid = ">= 2.0"
attrs = ">= 19"
colorlog = ">= 4.0"
black = ">= 20.8b1"

[tool.pylint.SIMILARITIES]
min-similarity-lines = 8

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
