[tool.poetry]
name = "upb-lib"
version = "0.5.4"
description = "Library for interacting with UPB PIM."
homepage = "https://github.com/gwww/upb-lib"
authors = ["Glenn Waters <gwwaters+upb@gmail.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
  'Development Status :: 4 - Beta',
  'Intended Audience :: Developers',
]
include = ["CHANGELOG.md", "bin/**/*"]
exclude = ["test"]

[tool.poetry.dependencies]
python = ">= 3.7"
pytz = ">= 2021"
pyserial-asyncio = ">= 0.5"

[tool.poetry.dev-dependencies]
pytest = ">= 7.2"
urwid = ">= 2.0"
attrs = ">= 21.2"
colorlog = ">= 4.0"
black = ">= 22.3"

[tool.pylint.SIMILARITIES]
min-similarity-lines = 8

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
